--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
+dj-database-url==0.4.1
 Django==1.8.6
-argparse==1.2.1
 django-bootstrap3==7.0.1
 django-bootstrap3-datetimepicker==2.2.3
 django-jquery==1.12.2
 psycopg2==2.6.1
-wheel==0.24.0
-wsgiref==0.1.2
