--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,9 @@ django-bootstrap3-datetimepicker==2.2.3
 django-jquery==1.12.2
 html5lib==0.999999999
 image==1.5.4
-lxml==3.6.1
 Pillow==3.3.0
-psycopg2==2.6.1
 pycparser==2.14
-Pyphen==0.9.4
 six==1.10.0
-tinycss==0.3
-WeasyPrint==0.30
 webencodings==0.5
+weasyprint==0.31
+psycopg2==2.6.1
