--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,19 @@ dj-database-url==0.4.1
 Django==1.8.6
 django-bootstrap3==7.0.1
 django-bootstrap3-datetimepicker==2.2.3
+django-easy-pdf==0.1.0
 django-jquery==1.12.2
-html5lib==0.999999999
+html5lib==1.0b8
 image==1.5.4
 lxml==3.6.1
 Pillow==3.3.0
 psycopg2==2.6.1
 pycparser==2.14
+PyPDF2==1.26.0
 Pyphen==0.9.4
+reportlab==3.3.0
 six==1.10.0
 tinycss==0.3
-WeasyPrint==0.30
+WeasyPrint==0.31
 webencodings==0.5
+xhtml2pdf==0.0.6
