--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ django-jquery==1.12.2
 html5lib==1.0b8
 image==1.5.4
 lxml==3.6.1
-Pillow==3.3.0
+Pillow==3.3.1
+pisa==3.0.27
 psycopg2==2.6.1
 pycparser==2.14
 PyPDF2==1.26.0
@@ -19,6 +20,6 @@ Pyphen==0.9.4
 reportlab==3.3.0
 six==1.10.0
 tinycss==0.3
-WeasyPrint==0.31
+WeasyPrint==0.30
 webencodings==0.5
 xhtml2pdf==0.0.6
