--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,10 @@ django-bootstrap3-datetimepicker==2.2.3
 django-easy-pdf==0.1.0
 django-jquery==1.12.2
 html5lib==1.0b8
-httplib2==0.9.2
 image==1.5.4
+inflect==0.2.5
 lxml==3.6.1
+num2words==0.5.3
 Pillow==2.9.0
 pisa==3.0.33
 psycopg2==2.6.1
@@ -22,5 +23,5 @@ reportlab==2.7
 six==1.10.0
 tinycss==0.3
 WeasyPrint==0.30
-webencodings==0.5
-xhtml2pdf==0.1b3
+webencodings==0.1
+xhtml2pdf==0.0.6
